# jenkins-job-builder-workflow

./: .gitignore  .travis.yml  README.rst  log.txt  requirements.txt  setup.cfg  setup.py  test-requirements.txt  tox.ini
doc/: Makefile  conf.py  index.rst  make.bat
test/: test_workflow.py
test/fixtures/: project_workflow_001.xml  project_workflow_001.yaml  project_workflow_002.xml  project_workflow_002.yaml
tools/: release.bash
workflow_job/: project_workflow.py
