[metadata]
name = jenkins-job-builder-workflow
author = Finn Haedicke
author_email = finn_haedicke@gmx.net
summary = Workflow support for jenkins job builder.
description-file = README.rst
license = Apache License, Version 2.0
home-page = https://github.com/finnhaedicke/jenkins-job-builder-workflow
version = 1.0.1
classifiers =
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.6
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 2 :: Only

[files]
packages =
    workflow_job

[pbr]
warnerrors = True

[entry_points]
jenkins_jobs.projects =
    workflow=workflow_job.project_workflow:Workflow
